<resources>
    <string name="app_name">F1 blog</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="e_mail">e-mail</string>
    <string name="password_again">repeat your password</string>
    <string name="birth_date">birth date</string>
    <string name="f1_logo">F1_logo</string>
    <string name="login_as_guest">Login as guest</string>
    <string name="blog">Ez lesz majd a blog</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="blog_list">Blog list</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="blog_information">Blog Information</string>
    <string name="blog_title">Blog Title</string>
    <string name="upload_blog">Upload Blog</string>

    <string-array name="blog_items_name">
        <item>Leclerc left with ‘no words’ over Ferrari’s Q2 exit in Imola as Hamilton ‘devastated’ not to see results</item>
        <item>Colapinto handed one-place grid penalty following Qualifying rule breach in Imola</item>
        <item>Tsunoda left to rue ‘stupid mistake’ that triggered enormous Qualifying crash at Imola</item>
        <item>FACTS AND STATS: Piastri takes first McLaren pole at Imola since 2005</item>
        <item>Verstappen reveals where Qualifying ‘fell away from me’ at Imola after missing out on pole to Piastri</item>
    </string-array>

    <string-array name="blog_items_info">
        <item>Charles Leclerc admitted that he had “no words” for Ferrari’s level of performance after a disastrous Qualifying at the Emilia-Romagna Grand Prix, while Lewis Hamilton was also “devastated” not to see progress reflected in the results as the pair exited Q2 in P11 and P12 respectively.</item>
        <item>Franco Colapinto has been handed a one-place grid penalty at the Emilia-Romagna Grand Prix following a rule breach during Saturday’s Qualifying session.</item>
        <item>Yuki Tsunoda could not hide his disappointment after suffering a heavy accident in the early stages of Saturday’s Qualifying session for the Emilia-Romagna Grand Prix.</item>
        <item>Oscar Piastri will start on pole position for the Emilia-Romagna Grand Prix, pipping Max Verstappen and George Russell to the top spot with his final lap. Here’s a round-up of all the best facts and stats from another thrilling Qualifying session…</item>
        <item>Max Verstappen has admitted that it was difficult to keep his soft tyres “alive” during Qualifying for the Emilia-Romagna Grand Prix, as the Red Bull driver narrowly missed out on pole position.</item>
    </string-array>

    <array name="item_images">
        <item>@drawable/ferrari</item>
        <item>@drawable/colapinto</item>
        <item>@drawable/tsunoda</item>
        <item>@drawable/pole</item>
        <item>@drawable/verstappen</item>
    </array>
</resources>
