<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

  <ImageView
      android:id="@+id/f1"
      android:layout_width="wrap_content"
      android:layout_height="30dp"
      android:layout_marginStart="70dp"
      android:layout_marginTop="50dp"
      android:layout_marginEnd="70dp"
      app:srcCompat="@drawable/f1"
      android:contentDescription="@string/f1_logo"
      />

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/register"
      android:textAlignment="center"
      android:layout_marginTop="20dp"
      android:textSize="30sp"
      android:textColor="#FF1801"
      android:textStyle="bold"/>

  <EditText
      android:id="@+id/editTextUsername"
      android:autofillHints="username"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:ems="10"
      android:hint="@string/username"
      android:inputType="text"
      android:layout_marginTop="60dp"
      android:layout_marginStart="15dp"
      android:layout_marginEnd="15dp"
      android:minHeight="48dp"/>

  <EditText
      android:id="@+id/userEmail"
      android:autofillHints="emailAddress"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:ems="10"
      android:hint="@string/e_mail"
      android:inputType="textEmailAddress"
      android:layout_marginTop="10dp"
      android:layout_marginStart="15dp"
      android:layout_marginEnd="15dp"
      android:minHeight="48dp"/>

  <EditText
      android:id="@+id/birthDate"
      android:autofillHints="birthdate"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:ems="10"
      android:hint="@string/birth_date"
      android:inputType="date"
      android:layout_marginTop="10dp"
      android:layout_marginStart="15dp"
      android:layout_marginEnd="15dp"
      android:minHeight="48dp"/>

  <EditText
      android:id="@+id/editTextPassword"
      android:autofillHints="password"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:ems="10"
      android:hint="@string/password"
      android:inputType="textPassword"
      android:layout_marginTop="10dp"
      android:layout_marginStart="15dp"
      android:layout_marginEnd="15dp"
      android:minHeight="48dp"/>

  <EditText
      android:id="@+id/passwordAgain"
      android:autofillHints="passwordagain"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:ems="10"
      android:hint="@string/password_again"
      android:inputType="textPassword"
      android:layout_marginTop="10dp"
      android:layout_marginStart="15dp"
      android:layout_marginEnd="15dp"
      android:minHeight="48dp"/>

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="30dp">

    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="#FFFFFF"
        android:backgroundTint="#FF1801"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:onClick="register"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="10dp"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/registerButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:onClick="login"
        android:text="@string/login"
        android:textColor="#FF1801"
        android:background="@android:color/transparent"
        tools:ignore="UsingOnClickInXml" />
  </RelativeLayout>





</LinearLayout>