<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/f1"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="70dp"
            app:srcCompat="@drawable/f1"
            android:contentDescription="@string/f1_logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/login"
            android:textAlignment="center"
            android:textColor="#FF0000"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/userEmail"
            app:layout_constraintTop_toTopOf="@+id/f1"
            app:layout_constraintVertical_bias="0.308" />

        <EditText
            android:id="@+id/userEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:minHeight="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.336" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="150dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:minHeight="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userEmail"
            app:layout_constraintVertical_bias="0.085" />

<!--        <Button-->
<!--            android:id="@+id/loginAsGuestButton"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="15dp"-->
<!--            android:layout_marginEnd="15dp"-->
<!--            android:onClick="loginAsGuest"-->
<!--            android:text="@string/login_as_guest"-->
<!--            android:backgroundTint="#FF1801"-->
<!--            tools:ignore="UsingOnClickInXml"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintHorizontal_bias="0.493"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/editTextPassword"-->
<!--            app:layout_constraintVertical_bias="0.089" />-->

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:onClick="login"
            android:text="@string/login"
            android:backgroundTint="#FF1801"
            tools:ignore="UsingOnClickInXml"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
            app:layout_constraintVertical_bias="0.030" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@android:color/transparent"
            android:backgroundTint="#FF1801"
            android:onClick="register"
            android:text="@string/register"
            android:textColor="#FF1801"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginButton"
            app:layout_constraintVertical_bias="0.041"
            tools:ignore="UsingOnClickInXml" />

        

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
